# cook-helper-django-react

cook-helper-django-react/: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
cook-helper-django-react/cook/: admin.py  models.py  serializers.py  urls.py  views.py
cook-helper-django-react/cook/migrations/: 0001_initial.py
cook-helper-django-react/cook_helper/: asgi.py  settings.py  urls.py  wsgi.py
